# GameWithSDL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Untitled
src/common/: CMakeLists.txt  commonClasses.cpp  commonClasses.hpp
src/components/: CMakeLists.txt  bodyComponents.hpp  connectionComponents.hpp  creatureComponents.hpp  miscComponents.hpp  renderComponents.hpp
src/connection/: CMakeLists.txt  connectionComponents.hpp  connectionFactory.cpp  connectionFactory.hpp
src/connection/connection/: connection.cpp  connection.hpp  distanceConnection.cpp  distanceConnection.hpp  girdleConnection.cpp  girdleConnection.hpp  revoluteConnection.cpp  revoluteConnection.hpp  weldConnection.cpp  weldConnection.hpp
src/controls/: CMakeLists.txt  controlComponents.hpp  controlUtils.hpp  controllerUpdateSystem.cpp  controllerUpdateSystem.hpp  creatureControlSystem.cpp  creatureControlSystem.hpp
src/controls/PID/: PIDController.cpp  PIDController.hpp  PIDRotController.cpp  PIDRotController.hpp  PIDScalarController.cpp  PIDScalarController.hpp  PIDVectorController.cpp  PIDVectorController.hpp
src/controls/kinematics/: kinematicUtils.cpp  kinematicUtils.hpp
src/creature/: CMakeLists.txt  baseCreature.cpp  baseCreature.hpp  bodyPart.cpp  bodyPart.hpp  capsuleBodyPart.cpp  capsuleBodyPart.hpp  circleBodyPart.hpp  creatureComponents.hpp  creatureFactory.cpp  creatureFactory.hpp  creatureUpdateSystem.cpp  human.hpp  humanoid.cpp  humanoid.hpp  polygonBodyPart.cpp  polygonBodyPart.hpp
src/creature/bodyParts/: bodyPart.cpp  bodyPart.hpp  capsuleBodyPart.cpp  capsuleBodyPart.hpp  circleBodyPart.cpp  circleBodyPart.hpp  limbBodyPart.cpp  limbBodyPart.hpp  polygonBodyPart.cpp  polygonBodyPart.hpp
src/creature/creature/: creature.cpp  creature.hpp  demoCreature.cpp  demoCreature.hpp
src/debug/: CMakeLists.txt  debugUtils.cpp  debugUtils.hpp
src/events/: CMakeLists.txt  eventComponents.hpp  eventUtils.cpp  eventUtils.hpp  events.hpp  pollEventSystem.cpp  pollEventSystem.hpp  quitSystem.cpp  quitSystem.hpp
src/interfaces/: CMakeLists.txt  gameSystem.cpp  gameSystem.hpp  objectConfig.cpp  objectConfig.hpp  pseudo3d.cpp  pseudo3d.hpp  registryBase.cpp  registryBase.hpp  registryComposite.cpp  registryComposite.hpp  registryContainer.cpp  registryContainer.hpp  registryObject.cpp  registryObject.hpp  registryObjectFactory.cpp  registryObjectFactory.hpp  sceneNode.cpp  system.cpp  system.hpp  visitor.cpp  visitor.hpp
src/interfaces/fallbackVisitor/: CMakeLists.txt  fallbackVisitor.cpp  fallbackVisitor.hpp
src/physics/: CMakeLists.txt  jointFactory.cpp  jointFactory.hpp  mouseJointSystem.cpp  mouseJointSystem.hpp  physicsBodyCreationSystem.cpp  physicsBodyCreationSystem.hpp  physicsComponents.hpp  physicsFactory.cpp  physicsFactory.hpp  physicsObjects.hpp  physicsUtils.cpp  physicsUtils.hpp  shapeFactory.cpp  shapeFactory.hpp  worldFactory.cpp  worldFactory.hpp  worldUpdateSystem.cpp  worldUpdateSystem.hpp
src/physics/bodyPart/: bodyPart.cpp
src/physics/components/: physicsComponents.hpp
src/physics/joint/: distanceJoint.cpp  distanceJoint.hpp  joint.cpp  joint.hpp  mouseJoint.cpp  mouseJoint.hpp  prismaticJoint.cpp  prismaticJoint.hpp  revoluteJoint.cpp  revoluteJoint.hpp  weldJoint.cpp  weldJoint.hpp
src/physics/shape/: capsule.cpp  capsule.hpp  circle.cpp  circle.hpp  emptyShape.cpp  emptyShape.hpp  polygon.cpp  polygon.hpp  segment.cpp  segment.hpp  shape.cpp  shape.hpp
src/physics/world/: basicWorld.cpp  basicWorld.hpp  world.cpp  world.hpp
src/render/: CMakeLists.txt  renderBackgroundSystem.cpp  renderComponents.hpp  renderContext.cpp  renderContext.hpp  renderPhysicsBodiesSystem.cpp  renderPhysicsBodiesSystem.hpp  renderPhysicsJointsSystem.cpp  renderUtils.cpp  renderUtils.hpp  renderer.hpp
src/render/renderer/: debugRenderer.cpp  debugRenderer.hpp  renderer.cpp  renderer.hpp  sceneRenderer.cpp  sceneRenderer.hpp
src/render/textures/: textureManager.cpp  textureManager.hpp  texturer.cpp  texturer.hpp
src/room/: CMakeLists.txt  RoomManager.hpp  roomComponents.hpp  roomIdentifiers.hpp  roomManager.cpp  roomManager.hpp  roomProxy.cpp  roomProxy.hpp
src/sceneNode/: CMakeLists.txt  sceneNode.cpp  sceneNode.hpp
src/sceneNode/creature/: CMakeLists.txt  creatureFactory.cpp  creatureFactory.hpp
src/sceneNode/creature/creature/: creature.cpp  creature.hpp  demoCreature.cpp  demoCreature.hpp
src/sceneNode/terrain/: CMakeLists.txt  terrainFactory.hpp
src/sceneNode/terrain/terrain/: capsuleTerrain.cpp  capsuleTerrain.hpp  (+8 more)
src/systems/: CMakeLists.txt  mouseJointSystem.cpp  mouseJointSystem.hpp  worldUpdateSystem.cpp  worldUpdateSystem.hpp
src/systems/controls/: cameraSystem.cpp  cameraSystem.hpp  controllerUpdateSystem.cpp  controllerUpdateSystem.hpp  creatureControlSystem.cpp  creatureControlSystem.hpp  mouseJointSystem.cpp  mouseJointSystem.hpp
src/systems/creature/: creatureUpdateSystem.cpp  creatureUpdateSystem.hpp
src/systems/events/: pollEventSystem.cpp  pollEventSystem.hpp  quitSystem.cpp  quitSystem.hpp
src/systems/misc/: cleanupSystem.cpp  cleanupSystem.hpp  sandboxSystem.cpp  sandboxSystem.hpp
src/systems/render/: debugRenderSystem.cpp  debugRenderSystem.hpp  renderBackgroundSystem.cpp  renderBackgroundSystem.hpp  renderPhysicsBodiesSystem.cpp  renderPhysicsBodiesSystem.hpp  renderPhysicsJointsSystem.cpp  renderPhysicsJointsSystem.hpp  sceneRenderSystem.cpp  sceneRenderSystem.hpp  texturingSystem.cpp  texturingSystem.hpp
src/systems/room/: roomLoadSystem.cpp  roomLoadSystem.hpp
src/systems/world/: worldUpdateSystem.cpp  worldUpdateSystem.hpp
src/terrain/: CMakeLists.txt  terrainComponents.hpp  terrainFactory.cpp  terrainFactory.hpp
src/terrain/terrain/: capsuleTerrain.cpp  capsuleTerrain.hpp  circleTerrain.cpp  circleTerrain.hpp  polygonTerrain.cpp  polygonTerrain.hpp  segmentTerrain.cpp  segmentTerrain.hpp  terrain.cpp  terrain.hpp
test/: CMakeLists.txt  mainTest.cpp
test/physics/world/: testWorld.cpp
test/registry/: connectionTest.cpp  jointTest.cpp  registryTest.cpp  registryTestUtils.hpp  standaloneEntityTest.cpp
(+109 files in other folders)
